# smart-recruiter-agent

./: .env.example  .gitignore  LEARNING_MULTI_AGENT.md  README.md  pyproject.toml  requirements.txt  run.py
frontend/: package-lock.json  package.json
frontend/src/: App.tsx  index.css
frontend/src/api/: client.ts
frontend/src/components/: Layout.tsx
frontend/src/pages/: ApplyForm.tsx  CandidateDetail.tsx  Dashboard.tsx  JobCreate.tsx  JobDetail.tsx  JobList.tsx
frontend/src/types/: index.ts
smart_recruiter/: __init__.py
smart_recruiter/agents/: __init__.py  candidate_assessor.py  interview_scheduler.py  jd_optimizer.py  resume_parser.py  skill_matcher.py
smart_recruiter/api/: __init__.py  main.py
smart_recruiter/api/routes/: __init__.py  apply.py  candidates.py  jobs.py  screening.py
smart_recruiter/config/: __init__.py  settings.py
smart_recruiter/crews/: __init__.py  interview_crew.py  jd_crew.py  screening_crew.py
smart_recruiter/database/: __init__.py  connection.py  models.py
smart_recruiter/models/: __init__.py  candidate.py  job.py  result.py
smart_recruiter/services/: __init__.py  email_service.py
smart_recruiter/tools/: __init__.py  database_tools.py  interview_tools.py  job_analyzer.py  resume_parser.py  skill_matcher.py
smart_recruiter/utils/: __init__.py
tests/: __init__.py
